# aika

./: .gitignore  Cargo.toml  README.md
aika_application/: Cargo.toml
aika_application/src/: lib.rs  main.rs
aika_application/src/test/: mod.rs  test_scene_1.rs
aika_core/: Cargo.toml
aika_core/src/: lib.rs
aika_core/src/bsdf/: bsdf.rs  diffuse.rs  mod.rs
aika_core/src/camera/: mod.rs  perspective_camera.rs
aika_core/src/component/: component.rs  mesh_filter.rs  mod.rs  transform.rs
aika_core/src/lighting/: directional_light.rs  mod.rs  point_light.rs  punctual_light.rs  rectangular_light.rs  spherical_light.rs  traits.rs  uniform_light_sampler.rs
aika_core/src/mashed_scene/: mashed_scene.rs  mashed_triangle.rs  mod.rs  test.rs
aika_core/src/material/: absorption_volume.rs  bsdf.rs  conductor_brdf.rs  constants.rs  dielectric_bsdf.rs  diffuse_brdf.rs  input_type.rs  material.rs  material_type.rs  metallic_roughness_brdf.rs  mod.rs  rough_conductor_brdf.rs  rough_dielectric_bsdf.rs  surface_material.rs  uniform_emit.rs  volume.rs
aika_core/src/material_graph/: common.rs  mod.rs  nodes.rs  traits.rs
aika_core/src/mesh/: mesh.rs  mod.rs  sub_mesh.rs  vertex.rs
aika_core/src/mesh/simple_mesh/: mod.rs  plane_mesh.rs
aika_core/src/path_tracing/: mod.rs  shade_normal.rs  shading_context.rs  simple_path_tracing.rs  tracing_service.rs
aika_core/src/renderer/: mod.rs  texcoords_renderer.rs
aika_core/src/scene/: game_object.rs  mod.rs  scene.rs  transform.rs
aika_core/src/spectrum/: blackbody_spectrum.rs  constant_spectrum.rs  densely_sampled_spectrum.rs  mod.rs  piecewise_linear_spectrum.rs  sampled_spectrum.rs  sampled_wavelength.rs  spectrum_utils.rs  test_spectrum.rs  traits.rs  xyz.rs
aika_core/src/texture/: filter_mode.rs  mod.rs  procedural_texture.rs  texture.rs  traits.rs
aika_core/src/utils/: common.rs  floats.rs  fresnel.rs  mod.rs  random_generator.rs
aika_math/: Cargo.toml
aika_spatial_structure/: Cargo.toml
aika_spatial_structure/src/: lib.rs
aika_spatial_structure/src/bvh/: bvh_builder.rs  bvh_node.rs  bvh_split_heuristic.rs  bvh_test.rs  bvh_tree.rs  default_bvh_split_heuristic.rs  mod.rs
aika_spatial_structure/src/naive/: mod.rs  naive_spatial_structure.rs
(+82 files in other folders)
