[package]
name = "aika_application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aika_core = { path = "../aika_core" }
aika_math = { path = "../aika_math" }
cgmath = { version = "0.18.0", features=["swizzle"] }
anyhow = "1.0"

[[bin]]
name = "diffuse_monkey"
path = "src/bin/difuse_monkey.rs"