[package]
name = "aika_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = { version = "0.18.0", features=["swizzle"] }
smallvec = "1.10.0"
num-traits = "0.2"
num-derive = "0.4.2"
anyhow = "1.0"
rand = "0.8.5"
